--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "test": "./node_modules/mocha/bin/mocha --recursive"
   },
   "dependencies": {
-    "superagent": "1.7.1",
     "is": "1.0.0",
-    "path": "0.12.7"
+    "path": "0.12.7",
+    "superagent": "^5.0.5"
   },
   "devDependencies": {
-    "mocha": "~2.3.4",
-    "sinon": "1.17.3",
-    "expect.js": "~0.3.1"
+    "expect.js": "~0.3.1",
+    "mocha": "^6.1.4",
+    "sinon": "1.17.3"
   }
 }
